# OLAF

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  TODO.md  genindex.html  index.html  objects.inv  poetry_pyproject.toml  py-modindex.html  pyproject.toml  search.html  searchindex.js
.github/: dependabot.yml
.github/workflows/: CI.yml  blank.yml  documentation.yml  lint.yml  test.yml
_sources/autoapi/: index.rst.txt
_sources/autoapi/olaf/: index.rst.txt
_sources/autoapi/olaf/CONSTANTS/: index.rst.txt
_sources/autoapi/olaf/image_verification/: index.rst.txt
_sources/autoapi/olaf/main/: index.rst.txt
_sources/autoapi/olaf/main_for_blanks/: index.rst.txt
_sources/autoapi/olaf/processing/: index.rst.txt
_sources/autoapi/olaf/utils/: index.rst.txt
autoapi/: index.html
autoapi/olaf/: index.html
autoapi/olaf/CONSTANTS/: index.html
autoapi/olaf/image_verification/: index.html
autoapi/olaf/image_verification/button_handler/: index.html
autoapi/olaf/image_verification/data_loader/: index.html
autoapi/olaf/image_verification/freezing_reviewer/: index.html
autoapi/olaf/main/: index.html
autoapi/olaf/main_for_blanks/: index.html
autoapi/olaf/processing/: index.html
autoapi/olaf/processing/blank_correction/: index.html
autoapi/olaf/processing/graph_data_csv/: index.html
autoapi/olaf/processing/spaced_temp_csv/: index.html
autoapi/olaf/utils/: index.html
docs/: conf.py  index.rst
olaf/: CONSTANTS.py  main.py  main_analyze.py  main_final_combine.py  main_for_blanks.py  main_for_cold_plate.py  main_plots.py
olaf/image_verification/: button_handler.py  data_loader.py  freezing_reviewer.py  well_verification.py
olaf/processing/: analyze.py  blank_correction.py  final_file_creation.py  graph_data_csv.py  on openpyxl  plots.py  spaced_temp_csv.py
olaf/utils/: cold_plate_di.py  data_handler.py  df_utils.py  math_utils.py  path_utils.py  plot_utils.py  type_utils.py
tests/: README.md  conftest.py
tests/test_data/SGP 2.21.24 base/: frozen_at_temp_reviewed_test1.csv  test1_VERIFIED_changed_frozen_at_temp_sgp men 02.21.24 a base.csv  test1_changed_frozen_at_temp_sgp men 02.21.24 a base.csv  test1_frozen_at_temp_sgp men 02.21.24 a base.csv
tests/test_data/goldens/: .gitkeep
tests/test_image_verification/: test_freezing_reviewer.py
tests/test_integration/: __init__.py  test_full_pipeline.py
tests/test_processing/: test_blank_correction.py  test_final_file_creation.py  test_graph_data_csv.py  test_spaced_temp_csv.py
tests/test_utils/: test_data_handler.py  test_df_utils.py  test_math_utils.py  test_path_utils.py  test_type_utils.py
(+15 files in other folders)
