[tool.poetry]
name = "olaf"
version = "0.1.0"
description = "OpenSource Library for Automating Freezing data acquisition from Ice Nucleation Spectrometer (OLAF DaQ INS)"
authors = ["SiGran <simongrannetia@gmail.com>"]
license = "AGPL-3.0"
readme = "README.md"
repository = "https://github.com/SiGran/OLAF"
keywords = ["freezing", "data acquisition", "spectrometer"]

[tool.poetry.dependencies]
python = "^3.11"
openpyxl = "^3.1.5"
pathlib2 = "^2.3.7.post1"
pandas = "^2.2.2"

[tool.poetry.group.dev.dependencies]
ruff = "^0.5.6"
pre-commit = "^3.8.0"
pytest = "^8.3.2"
mypy = "^1.11.0"
bandit = "^1.7.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 100

[tool.ruff.lint]
extend-select = ["I", "F", "E", "W"]

