[project]
name = "olaf"
version = "0.1.0"
description = "OpenSource Library for Automating Freezing data acquisition from Ice Nucleation Spectrometer (OLAF DaQ INS)"
authors = ["SiGran <simongrannetia@gmail.com>"]
license = "AGPL-3.0"
readme = "README.md"
repository = "https://github.com/SiGran/OLAF"
keywords = ["freezing", "data acquisition", "spectrometer"]


requires-python = ">=3.11.0"
dependencies = [
    "pandas>=2.2.3",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5.6",
    "pre-commit>=3.8.0",
    "pytest>=8.3.2",
    "mypy>=1.11.0",
    "bandit>=1.7.9",
    "pandas-stubs>=2.2.2.240603",
    "sphinx-autoapi>=3.2.1",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
extend-select = ["I", "F", "E", "W"]

[tool.pytest.ini_options]
testpaths = "tests"