[project]
name = "olaf"
version = "0.1.0"
description = "OpenSource Library for Automating Freezing data acquisition from Ice Nucleation Spectrometer (OLAF DaQ INS)"
authors = [
    {name = "SiGran"}
]
license = "AGPL-3.0"
readme = "README.md"
keywords = ["freezing", "data acquisition", "spectrometer"]


requires-python = ">=3.11.0"
dependencies = [
    "matplotlib>=3.10.3",
    "pandas>=2.2.3",
]

[project.urls]
"Repository" = "https://github.com/SiGran/OLAF"
"Organization" = "https://www.linkedin.com/company/trackdat"

[project.optional-dependencies]
dev = [
    "ruff>=0.5.6",
    "pre-commit>=3.8.0",
    "pytest>=8.3.2",
    "mypy>=1.11.0",
    "bandit>=1.7.9",
    "pandas-stubs>=2.2.2.240603",
    "sphinx-autoapi>=3.2.1",
    "furo>=2024.1.29",
    "pytest-cov>=4.1.0",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
extend-select = ["I", "F", "E", "W"]

[tool.pytest.ini_options]
testpaths = "tests"

[tool.bandit]
exclude = ["tests"]
